# AetherKiri

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  build.sh  package-lock.json  package.json  tsconfig.json  vcpkg.json  vite.config.ts
.github/scripts/: configure-vcpkg-github-packages.sh  pack-vcpkg-release-bundle.sh  publish-vcpkg-release-bundle.sh  restore-vcpkg-release-bundle.sh
.github/workflows/: android-vcpkg.yml  android.yml  ci-checks.yml  ios-vcpkg.yml  ios.yml  linux.yml  macos-vcpkg.yml  macos.yml  pages.yml  web-vcpkg.yml  web.yml
apps/flutter_app/android/app/: build.gradle.kts
apps/flutter_app/ios/: Podfile
apps/flutter_app/ios/Runner/: AppDelegate.swift  Info.plist  LandscapeFlutterViewController.swift  SceneDelegate.swift
apps/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/lib/: main.dart
apps/flutter_app/lib/pages/: game_page.dart  home_page.dart
apps/flutter_app/lib/widgets/: engine_surface.dart
apps/flutter_app/linux/flutter/: generated_plugins.cmake
apps/flutter_app/windows/flutter/: generated_plugins.cmake
apps/godot_app/: aether_kiri.gdextension  aether_kiri.gdextension.uid  export_presets.cfg  project.godot
apps/godot_app/assets/: icon.png.import  icon.svg.import
apps/godot_app/assets/fonts/: aetherkiri-runtime-cjk.otf.import  aetherkiri-runtime-symbols.ttf.import  aetherkiri-ui.ttf.import
apps/godot_app/assets/icons/: app_store_1024x1024.png.import  icon_1024x1024.png.import  icon_114x114.png.import  icon_120x120.png.import  icon_128x128.png.import  icon_136x136.png.import  icon_152x152.png.import  icon_167x167.png.import  icon_180x180.png.import  icon_192x192.png.import  icon_20x20.png.import  icon_29x29.png.import  icon_40x40.png.import  icon_58x58.png.import  icon_60x60.png.import  icon_76x76.png.import  icon_80x80.png.import  icon_87x87.png.import
apps/godot_app/scenes/: main.tscn
apps/godot_app/scripts/: gpu_blend_self_test.gd  gpu_blend_self_test.gd.uid  gui_render_probe.gd  gui_render_probe.gd.uid  main.gd  main.gd.uid  manual_render_probe.gd  manual_render_probe.gd.uid  perf_input_probe.gd  perf_input_probe.gd.uid  probe_config.gd.uid  sequence_perf_probe.gd  sequence_perf_probe.gd.uid  smoke_test.gd  smoke_test.gd.uid  step_render_probe.gd  step_render_probe.gd.uid
bridge/engine_api/: CMakeLists.txt
bridge/engine_api/include/: engine_api.h  engine_options.h
bridge/engine_api/src/: android_jni_bridge.cpp  engine_api.cpp
bridge/flutter_engine_bridge/ios/: flutter_engine_bridge.podspec
bridge/flutter_engine_bridge/ios/Classes/: FlutterEngineBridgePlugin.swift
bridge/flutter_engine_bridge/lib/: flutter_engine_bridge.dart
bridge/godot_extension/: CMakeLists.txt
bridge/godot_extension/src/: aether_kiri_godot.cpp  web_longjmp_stubs.cpp
cpp/core/: CMakeLists.txt
cpp/core/base/: CharacterSet.cpp  EventIntf.cpp  EventIntf.h  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SysInitIntf.h  UtilStreams.cpp  XP3Archive.cpp  XP3Archive.h
cpp/core/base/impl/: NativeEventQueue.cpp  NativeEventQueue.h  StorageImpl.cpp  SysInitImpl.cpp  SysInitImpl.h  SystemImpl.cpp
cpp/core/environ/: Application.cpp  Application.h  CMakeLists.txt  DumpSend.cpp  EngineBootstrap.cpp  EngineBootstrap.h  EngineLoop.cpp  EngineLoop.h  MainScene.cpp  MainScene.h  Platform.h
cpp/core/environ/ConfigManager/: GlobalConfigManager.cpp  LocaleConfigManager.cpp
cpp/core/environ/android/: AndroidUtils.cpp  KrkrJniHelper.cpp
cpp/core/environ/stubs/: ui_stubs.cpp
cpp/core/environ/web/: Platform.cpp
cpp/core/environ/win32/: ApplicationSpecialPath.h  SystemControl.cpp  TVPWindow.h
cpp/core/movie/ffmpeg/: AudioCodecFFmpeg.cpp  AudioCodecPassthrough.cpp  DemuxFFmpeg.cpp  FactoryCodec.cpp  KRMovieLayer.cpp  KRMovieLayer.h  KRMoviePlayer.cpp  KRMoviePlayer.h  MathUtils.h  (+3 more)
cpp/core/plugin/: PluginCallTracer.cpp  PluginImpl.cpp  PluginImpl.h  ncbind.cpp  ncbind.hpp
cpp/core/sound/: FFWaveDecoder.cpp  PhaseVocoderFilter.cpp
cpp/core/tjs2/: tjsArray.cpp  tjsConfig.cpp  tjsInterCodeExec.cpp  tjsInterCodeGen.h  tjsInterface.h  tjsObject.cpp  tjsObjectExtendable.cpp  tjsScriptBlock.cpp  tjsString.h  tjsVariantString.cpp
cpp/core/visual/: CMakeLists.txt  FontImpl.h  FreeTypeFontRasterizer.cpp  FreeTypeFontRasterizer.h  GraphicsLoaderIntf.cpp  LayerIntf.cpp  LayerIntf.h  LayerManager.cpp  LayerManager.h  LoadWEBP.cpp  MenuItemIntf.cpp  RenderManager.cpp  TransIntf.cpp  WindowIntf.cpp  WindowIntf.h  tvpgl.cpp
cpp/plugins/: CMakeLists.txt  base64.cpp  clipboardEx.cpp  csvParser.cpp  dummy_plugin_stubs.cpp  encode.cpp  expat.cpp  extNagano.cpp  krkrgles.cpp  krkrlive2d.cpp  krkrlive2d_stub.cpp  layerExMovie.cpp  layerExSaveCompat.cpp  lineParser.cpp  memfile.cpp  minizip.cpp  packinone.cpp  qrcode.cpp  scriptsEx.cpp  sqlitePlugin.cpp  textrender.cpp  windowEx.cpp
cpp/plugins/fstat/: main.cpp
cpp/plugins/layerex_draw/: CMakeLists.txt
cpp/plugins/layerex_draw/general/: gdip_cxx.h
cpp/plugins/motionplayer/: CMakeLists.txt  EmotePlayer.cpp  EmotePlayer.h  Player.h  PlayerCore.cpp  PlayerInternal.h  PlayerQuery.cpp  PlayerRender.cpp  ResourceManager.cpp  ResourceManager.h  RuntimeSupport.cpp  main.cpp
cpp/plugins/psbfile/: PSBMedia.cpp  PSBValue.cpp
cpp/plugins/psdfile/: psdclass.cpp  psdclass_loadstream.cpp
cpp/plugins/psdfile/psdparse/: psddesc.h  psdimage.cpp  psdparse.h
cpp/plugins/qrcode/: QR_Encode.cpp  QR_Encode.h
doc/: development.md  development.zh-CN.md  plugin_gap_plan.md  verified_games.md  verified_games.zh-CN.md
tests/unit-tests/plugins/: CMakeLists.txt  registry.cpp
tools/: CMakeLists.txt
tools/xp3_select/: CMakeLists.txt  main.cpp
vcpkg/ports/ffmpeg/: portfile.cmake
vcpkg/ports/fmt/: fix-emscripten-cstdlib.patch  portfile.cmake
vcpkg/ports/godot-cpp/: ios-no-cocoa.patch  packagable.patch  portfile.cmake
vcpkg/ports/libarchive/: portfile.cmake
vcpkg/triplets/: arm64-ios-simulator.cmake  arm64-osx.cmake  wasm32-emscripten.cmake  x64-ios-simulator.cmake
web/live2d/: aetherkiri-live2d-bridge.ts  vite.config.ts
(+31 files in other folders)
